@@ -105,7 +105,7 @@
     <maven.compiler.target>${target.java.version}</maven.compiler.target>
     <maven.compiler.args>--add-modules=jdk.incubator.vector -Xpkginfo:always</maven.compiler.args>
     <argLine></argLine>
-    <extra.compiler.args></extra.compiler.args>
+    <extra.compiler.args>--enable-preview</extra.compiler.args>
     <mainClass></mainClass>
     <artifact.classifier></artifact.classifier>
     <artifact.suffix></artifact.suffix>
